force-app/main/default/objects/ChannelResponse__c/fields/NSE_Name__c.field-meta.xml
<CustomField>
    <fullName>NSE_Name__c</fullName>
    <formula>NSE_Id__r.PartnerName__c</formula>
    <label>NSE Name</label>
    <type>Text</type>
</CustomField>