force-app/main/default/objects/ChannelResponse__c/fields/NutritionalReport__c.field-meta.xml
<CustomField>
    <fullName>NutritionalReport__c</fullName>
    <formula>IF(
    ISPICKVAL(BrandRelationship__r.PrimaryContact__r.Account.Market__c,&quot;IN&quot;),
    HYPERLINK(&quot;https://reports.pediasuregrowthguide.com/customer/details/index.html?id=&quot; +  ExternalAppId__c + &quot;#/growth-chart&quot;, &quot;Open Growth Guide&quot;, &quot;_blank&quot;),
    &quot;&quot;
)</formula>
    <label>Nutritional Report</label>
    <type>Text</type>
</CustomField>