force-app/main/default/objects/ChannelResponse__c/fields/Opinion_about_the_sample_gimmick_kit__c.field-meta.xml
<CustomField>
    <fullName>Opinion_about_the_sample_gimmick_kit__c</fullName>
    <label>Opinion about the sample/gimmick/kit?</label>
    <type>TextArea</type>
</CustomField>