force-app/main/default/objects/ChannelResponse__c/fields/OrderCreationStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderCreationStatus__c</fullName>
    <label>Order Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending - Milk Code Restriction</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful - Product Unavailable</fullName>
            </value>
            <value>
                <fullName>Unsuccessful - Ineligible</fullName>
            </value>
            <value>
                <fullName>Unsuccessful - Missing Address</fullName>
            </value>
            <value>
                <fullName>Successful - Sample Given on Ground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>