force-app/main/default/objects/ChannelResponse__c/fields/OrganisationName__c.field-meta.xml
<CustomField>
    <fullName>OrganisationName__c</fullName>
    <label>Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>