force-app/main/default/objects/ChannelResponse__c/fields/OutletType__c.field-meta.xml
<CustomField>
    <fullName>OutletType__c</fullName>
    <formula>TEXT(Channel__r.OutletType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Type</label>
    <type>Text</type>
</CustomField>