force-app/main/default/objects/ChannelResponse__c/fields/Patner_Code__c.field-meta.xml
<CustomField>
    <fullName>Patner_Code__c</fullName>
    <formula>FieldDietician__r.PartnerCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patner Code</label>
    <type>Text</type>
</CustomField>