force-app/main/default/objects/ChannelResponse__c/fields/PreviousRegistration_SameCampaign__c.field-meta.xml
<CustomField>
    <fullName>PreviousRegistration_SameCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Registration - Same Campaign</label>
    <type>Checkbox</type>
</CustomField>