force-app/main/default/objects/ChannelResponse__c/fields/PreviousRegistrationAdult__c.field-meta.xml
<CustomField>
    <fullName>PreviousRegistrationAdult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Registration - Adult</label>
    <type>Checkbox</type>
</CustomField>