force-app/main/default/objects/ChannelResponse__c/fields/PreviousRegistrationPediatric__c.field-meta.xml
<CustomField>
    <fullName>PreviousRegistrationPediatric__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Registration - Pediatric</label>
    <type>Checkbox</type>
</CustomField>