force-app/main/default/objects/ChannelResponse__c/fields/ProductSampleRequested__c.field-meta.xml
<CustomField>
    <fullName>ProductSampleRequested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Sample Requested</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND 2 AND ((3 OR 4) OR (5 AND 6))</booleanFilter>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.AvailableForSample__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.UserType</field>
            <operation>equals</operation>
            <value>AutomatedProcess</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$User.UserType</field>
            <operation>notEqual</operation>
            <value>AutomatedProcess</value>
        </filterItems>
        <filterItems>
            <field>$User.Market__c</field>
            <operation>contains</operation>
            <valueField>Product2.Market__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Channel Responses (Product Sample Requested)</relationshipLabel>
    <relationshipName>ProductSampleRequesteds</relationshipName>
    <type>Lookup</type>
</CustomField>