force-app/main/default/objects/ChannelResponse__c/fields/PromoterCode__c.field-meta.xml
<CustomField>
    <fullName>PromoterCode__c</fullName>
    <label>Promoter Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>