force-app/main/default/objects/ChannelResponse__c/fields/PromoterName__c.field-meta.xml
<CustomField>
    <fullName>PromoterName__c</fullName>
    <label>Promoter Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>