force-app/main/default/objects/ChannelResponse__c/fields/RegisteredFromDevice__c.field-meta.xml
<CustomField>
    <fullName>RegisteredFromDevice__c</fullName>
    <label>Registered From Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>