force-app/main/default/objects/ChannelResponse__c/fields/Regular_Store__c.field-meta.xml
<CustomField>
    <fullName>Regular_Store__c</fullName>
    <label>Regular Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>