force-app/main/default/objects/ChannelResponse__c/fields/RequestforNutritionalCounseling__c.field-meta.xml
<CustomField>
    <fullName>RequestforNutritionalCounseling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Request for Nutritional Counseling (Cloudpage)</description>
    <label>Request for Nutritional Counseling</label>
    <type>Checkbox</type>
</CustomField>