force-app/main/default/objects/ChannelResponse__c/fields/SampleGivenOnGround__c.field-meta.xml
<CustomField>
    <fullName>SampleGivenOnGround__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Given On-Ground</label>
    <type>Checkbox</type>
</CustomField>