force-app/main/default/objects/ChannelResponse__c/fields/SampleProductCode__c.field-meta.xml
<CustomField>
    <fullName>SampleProductCode__c</fullName>
    <formula>ProductSampleRequested__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>