force-app/main/default/objects/ChannelResponse__c/fields/SampleRedemptionMethod__c.field-meta.xml
<CustomField>
    <fullName>SampleRedemptionMethod__c</fullName>
    <label>Sample Redemption Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AbbottMall</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>CVS</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Drugstore</fullName>
            </value>
            <value>
                <fullName>GreatTree</fullName>
            </value>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>Line Points</fullName>
            </value>
            <value>
                <fullName>MedFirst</fullName>
            </value>
            <value>
                <fullName>WellCare</fullName>
            </value>
            <value>
                <fullName>YourChance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>