force-app/main/default/objects/ChannelResponse__c/fields/SourceCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>SourceCreatedDate__c</fullName>
    <label>Source Created Date</label>
    <type>DateTime</type>
</CustomField>