force-app/main/default/objects/ChannelResponse__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Channel Responses (Store Name)</relationshipLabel>
    <relationshipName>Channel_Responses3</relationshipName>
    <type>Lookup</type>
</CustomField>