force-app/main/default/objects/ChannelResponse__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <formula>Store__r.PartnerName__c</formula>
    <label>Store Name</label>
    <type>Text</type>
</CustomField>