force-app/main/default/objects/ChannelResponse__c/fields/SubmittedFromDevice__c.field-meta.xml
<CustomField>
    <fullName>SubmittedFromDevice__c</fullName>
    <label>Submitted From Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>