force-app/main/default/objects/ChannelResponse__c/fields/SupervisorCode__c.field-meta.xml
<CustomField>
    <fullName>SupervisorCode__c</fullName>
    <label>Supervisor Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>