force-app/main/default/objects/ChannelResponse__c/fields/SupervisorName__c.field-meta.xml
<CustomField>
    <fullName>SupervisorName__c</fullName>
    <label>Supervisor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>