force-app/main/default/objects/ChannelResponse__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <type>TextArea</type>
</CustomField>