force-app/main/default/objects/ChannelResponse__c/fields/Territory_code__c.field-meta.xml
<CustomField>
    <fullName>Territory_code__c</fullName>
    <formula>FieldDietician__r.Territory_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory code</label>
    <type>Text</type>
</CustomField>