force-app/main/default/objects/ChannelResponse__c/fields/UTMString__c.field-meta.xml
<CustomField>
    <fullName>UTMString__c</fullName>
    <label>UTM String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>