force-app/main/default/objects/ChannelResponse__c/fields/Visit_ID__c.field-meta.xml
<CustomField>
    <fullName>Visit_ID__c</fullName>
    <label>Visit ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>