force-app/main/default/objects/ChannelResponse__c/fields/Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Time__c</fullName>
    <label>Visit Time</label>
    <type>Time</type>
</CustomField>