force-app/main/default/objects/ChannelResponse__c/fields/Vouchers_preferred_online_offline__c.field-meta.xml
<CustomField>
    <fullName>Vouchers_preferred_online_offline__c</fullName>
    <label>Vouchers preferred online / offline?</label>
    <type>TextArea</type>
</CustomField>