force-app/main/default/objects/ChannelResponse__c/fields/Who_influenced_the_customer_to_buy__c.field-meta.xml
<CustomField>
    <fullName>Who_influenced_the_customer_to_buy__c</fullName>
    <label>Who influenced the customer to buy?</label>
    <type>TextArea</type>
</CustomField>