force-app/main/default/objects/ChannelResponse__c/fields/zone__c.field-meta.xml
<CustomField>
    <fullName>zone__c</fullName>
    <formula>FieldDietician__r.ZoneDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>