force-app/main/default/objects/ChannelResponse__c/validationRules/PreventChangesInRegistrationDate.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventChangesInRegistrationDate</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( RegistrationDate__c )</errorConditionFormula>
    <errorMessage>Registration Date cannot be change</errorMessage>
</ValidationRule>